--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -237,3 +237,16 @@
     left: -30%;
   }
 }
+
+.popup {
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.6);
+  transition: all 0.3s;
+}
+
+.popup-show {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+}
